--- a/src/management_system/templates/management_system/utilization_add_region.html
+++ b/src/management_system/templates/management_system/utilization_add_region.html
@@ -20,7 +20,7 @@
 
   <hr />
 
-  <button type="button" onclick="addUtilizationX()" class="btn btn-success">Zatwirdz</button>
+  <button type="button" onclick="addUtilizationX()" class="btn btn-success">Zatwierdź</button>
 
   <script>
     $(document).ready(function() {
