item count for utilization and UI

--- a/src/management_system/templates/management_system/single_utilization.html
+++ b/src/management_system/templates/management_system/single_utilization.html
@@ -40,6 +40,7 @@
       <tbody>
   
           {% for item in items %}
+          
         <tr class="fw-normal">
           <td>
             <span>{{item.category}}</span>
@@ -61,12 +62,20 @@
             </td>
             
           <td>
-            <a class="btn btn-primary" href="{% url 'singleItem' item.id %}" role="button">Wyświetl</a>
-            {% if not utilization.company_transfer_date %}
-              <a class="btn btn-danger" href="{% url 'utilizationDeleteItem' utilization.id item.id %}" role="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16"><path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/></svg>
-              </a>
-            {% endif %}
+              <div class="btn-group">
+              <a class="btn btn-secondary" href="{% url 'singleItem' item.id %}" role="button">Wyświetl</a>
+              {% if not utilization.company_transfer_date %}
+              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+              </button>
+              
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'utilizationDeleteItem' utilization.id item.id %}">Usuń</a></li>
+              </ul>
+              {% endif %}
+            </div>
+
+  
           </td>
           
         </tr>
