--- a/src/management_system/templates/management_system/utilization_add_item.html
+++ b/src/management_system/templates/management_system/utilization_add_item.html
@@ -136,7 +136,7 @@
 
     // Redirect to the protocol
     // TODO: add URL /utilization/<id>
-    window.location.href = "{% url 'utilization' %}"// + id;
+    window.location.href = "{% url 'utilization' %}" + id;
   }
 
   // This variable holds search-item id
