--- a/src/management_system/templates/management_system/employees.html
+++ b/src/management_system/templates/management_system/employees.html
@@ -1,106 +1,227 @@
 {% extends 'main.html' %}
 
-
 {% block content %}
 
 <h2>Pracownicy</h2>
 {% comment %} <a class="btn btn-primary mb-1" href="{% url 'newemployee' %}" role="button">Nowy pracownik</a> {% endcomment %}
 <hr />
 
-<form action="{% url 'employees' %}" method="get">
-    <input id="search" type="text" placeholder="Imię..." value='{{search_value}}'>
-    <button type="button" onclick="page(0)">Szukaj</button>
-
+<form>
+    <input id="search" type="text" placeholder="Szukaj pracownika..." value="{{ search_value }}">
 </form>
 
-<table class="table mb-0">
-    <thead>
-      <tr>
-        <th scope="col">Imię i nazwisko</th>
-        <th scope="col">Dział</th>
-        <th scope="col">Lokalizacja</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody id="data"></tbody>
-  </table>
-
-  
-  <div class="card-footer text-end p-3">
-    
-  </div>
-  <div class="container p-4">
-    <div class="pagination justify-content-center">
-        <span class="step-links">
-              <button class="btn" onclick="page(0)">&laquo; first</button>
-              <button class="btn" onclick="page(page_no - 1)">previous</button>
-  
-            <span class="current"> 
-              Page <span id="pg_no"></span> of <span id="pg_max"></span>
-            </span>  
-  
-              <button class="btn" onclick="page(page_no + 1)">next</button>
-              <button class="btn" onclick="page(count)">last &raquo;</button>
-        </span>
-        </div>
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="deleteModalLabel">Czy na pewno chcesz usunąć tego pracownika?</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid" id="modalRowsContainer">Ta operacja jest nieodwracalna.</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" id="confirmDeleteButton">Usuń</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zamknij</button>
+      </div>
     </div>
-  </div>    
-  <script>
+  </div>
+</div>
+
+<table class="table mt-3">
+    <thead>
+        <tr>
+            <th scope="col">Imię i nazwisko</th>
+            <th scope="col">Dział</th>
+            <th scope="col">Lokalizacja</th>
+            <th scope="col"></th>
+        </tr>
+    </thead>
+    <tbody id="data">
+
+    </tbody>
+</table>
+
+<div class="card-footer text-end p-3">
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center" id="pagination">
+            <li class="page-item" id="first-page">
+                <button class="page-link" onclick="page(0)">&laquo; First</button>
+            </li>
+            <li class="page-item" id="previous-page">
+                <button class="page-link" onclick="page(page_no - 1)">Previous</button>
+            </li>
+            <!-- Page numbers will be inserted here dynamically -->
+            <li class="page-item" id="next-page">
+                <button class="page-link" onclick="page(page_no + 1)">Next</button>
+            </li>
+            <li class="page-item" id="last-page">
+                <button class="page-link" onclick="page(count / page_size)">&raquo; Last</button>
+            </li>
+        </ul>
+    </nav>
+</div>
+
+<script>
     const page_size = 20;
     let page_no = 0;
     let count = -1;
-    $(document).ready(async () => {
-      page(0);
+    let employeeIdToDelete = null;
+
+    document.addEventListener('DOMContentLoaded', () => {
+        page(0);
+
+        document.getElementById('search').addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                page(0);
+            }
+        });
+
+        document.getElementById('confirmDeleteButton').addEventListener('click', function() {
+            if (employeeIdToDelete) {
+                fetch(`/add_employee/delete/${employeeIdToDelete}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': getCookie('csrftoken') // Ensure you have a function to get CSRF token
+                    },
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        // Remove the employee row from the table
+                        document.querySelector(`[data-employee-id="${employeeIdToDelete}"]`).closest('tr').remove();
+                        employeeIdToDelete = null;
+                        const deleteModal = bootstrap.Modal.getInstance(document.getElementById('deleteModal'));
+                        deleteModal.hide();
+                    } else {
+                        alert('Failed to delete the employee');
+                    }
+                })
+                .catch(error => console.error('Error:', error));
+            }
+        });
     });
 
-    async function page(p){
-      if(p < 0)
-        p = 0;
-      else if(count > 0 && (count / page_size - 1) < p)
-        p = Math.ceil(count / page_size - 1);
-      page_no = p;
+    async function page(p) {
+        if (p < 0) p = 0;
+        else if (count > 0 && (count / page_size - 1) < p) p = Math.ceil(count / page_size - 1);
+        console.log(count)
+        page_no = p;
 
-      let data = document.getElementById('data');
-      data.innerHTML = '';
+        let data = document.getElementById('data');
+        data.innerHTML = '';
 
-      let params = {
-        limit: page_size,
-        offset: p * page_size,
-        {% if request.user.userinfo.region.id %}
-        region: "{{request.user.userinfo.region.id}}" 
-        {% endif %}
-      };
+        let params = {
+            limit: page_size,
+            offset: p * page_size,
+            {% if request.user.userinfo.region.id %}
+            region: "{{ request.user.userinfo.region.id }}"
+            {% endif %}
+        };
 
-      let search = document.getElementById('search').value;
-      
-      if(search)
-        params["search"] = search;
+        let search = document.getElementById('search').value;
+        if (search) params["search"] = search;
 
-      let employees_data = await fetch("{% url 'employee-list' %}?" + new URLSearchParams(params).toString());
-	  let employees = await employees_data.json();
-      count = employees.count;
-	  employees = employees.results;
+        let response = await fetch("{% url 'employee-list' %}?" + new URLSearchParams(params).toString());
+        let result = await response.json();
+        count = result.count;
+        let employees = result.results;
 
-      for(let employee of employees){
-        data.innerHTML += '<tr class="fw-normal">'
-                       + '<th><svg xmlns="http://www.w3.org/2000/svg" width="55px" height="auto" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/></svg>'
-                       + '<span class="ms-2">' + employee.user_name + ' ' + employee.user_surname + '</span>'
-                       + '</th><td class="align-middle">'
-                       + '<span>' + employee.user_department + '</span>'
-                       + '</td><td class="align-middle">'
-                       + '<h6 class="mb-0"><span class="badge bg-danger">' + employee.user_location + '</span></h6>'
-                       + '</td><td>'
-                       + '<div class="btn-group"><a class="btn btn-secondary" href="/employees/' + employee.id + '/items" role="button">Wyświetl</a>'
-                       + '<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">'
-                       + '<span class="visually-hidden">Toggle Dropdown</span></button><ul class="dropdown-menu">'
-                       + '<li><a class="dropdown-item" href="{% url 'editEmployee' %}?id=' + employee.id + '">Edycja</a></li>'
-                       + '<li><a class="dropdown-item" href="/employees/' + employee.id + '/delete">Usuń</a></li></ul></div>'
-                       + '</td></tr>';
-      }
+        employees.forEach(employee => {
+            data.innerHTML += `
+                <tr>
+                    <th scope="row">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="55px" height="auto" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        </svg>
+                        <span class="ms-2">${employee.user_name} ${employee.user_surname}</span>
+                    </th>
+                    <td class="align-middle">
+                        <span>${employee.user_department}</span>
+                    </td>
+                    <td class="align-middle">
+                        <h6 class="mb-0">
+                            <span class="badge bg-danger">${employee.user_location}</span>
+                        </h6>
+                    </td>
+                    <td>
+                        <div class="btn-group">
+                            <a class="btn btn-secondary" href="/employees/${employee.id}/items" role="button">Wyświetl</a>
+                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="visually-hidden">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{% url 'editEmployee' %}?id=${employee.id}">Edycja</a></li>
+                                <li><a class="dropdown-item delete-employee" href="#" data-employee-id="${employee.id}">Usuń</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+            `;
+        });
 
-      document.getElementById('pg_no').innerHTML = page_no;
-      document.getElementById('pg_max').innerHTML = Math.ceil(count / page_size - 1);
+        document.querySelectorAll('.delete-employee').forEach(element => {
+            element.addEventListener('click', function(event) {
+                event.preventDefault();
+                employeeIdToDelete = this.getAttribute('data-employee-id');
+                const deleteModal = new bootstrap.Modal(document.getElementById('deleteModal'));
+                deleteModal.show();
+            });
+        });
+
+        updatePagination();
     }
-  </script>
 
-  {% endblock content %}
+    function updatePagination() {
+        let pagination = document.getElementById('pagination');
+        let totalPages = Math.ceil(count / page_size);
+
+        // Clear existing page numbers
+        pagination.querySelectorAll('.page-number').forEach(pageNumber => pageNumber.remove());
+
+        // Calculate start and end page numbers
+        let startPage = Math.max(page_no - 1, 0);
+        let endPage = Math.min(startPage + 2, totalPages - 1);
+
+        // Adjust start page if end page is less than total pages
+        if (endPage - startPage < 2) {
+            startPage = Math.max(endPage - 2, 0);
+        }
+
+        // Generate new page numbers
+        for (let i = startPage; i <= endPage; i++) {
+            let pageNumberItem = document.createElement('li');
+            pageNumberItem.className = 'page-item page-number' + (i === page_no ? ' active' : '');
+            pageNumberItem.innerHTML = `<button class="page-link" onclick="page(${i})">${i + 1}</button>`;
+            pagination.insertBefore(pageNumberItem, pagination.children[pagination.children.length - 2]);
+        }
+
+        // Enable/Disable navigation buttons
+        document.getElementById('first-page').classList.toggle('disabled', page_no === 0);
+        document.getElementById('previous-page').classList.toggle('disabled', page_no === 0);
+        document.getElementById('next-page').classList.toggle('disabled', page_no >= totalPages - 1);
+        document.getElementById('last-page').classList.toggle('disabled', page_no >= totalPages - 1);
+    }
+
+    // Function to get CSRF token
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+</script>
+
+
+{% endblock content %}
