--- a/src/management_system/templates/management_system/protocols.html
+++ b/src/management_system/templates/management_system/protocols.html
@@ -7,17 +7,46 @@
 
   <h2>Protokoły</h2>
   <hr />
-  <form action="{% url 'protocollist' %}" method="get">
-    <input name="qname" type="text" placeholder="Imię..." value='{{qname_value}}'>
-    <input name="qsurname" type="text" placeholder="Nazwisko..." value='{{qsurname_value}}'>
-    <input name="qbarcode" type="text" placeholder="Kod..." value='{{qbarcode_value}}'>
-    <input name="qdate" type="text" placeholder="Data przekazania..." pattern="((3[0-1])|([1-2][0-9])|(0[1-9]))\.((0[1-9])|(1[0-2]))\.[1-9][0-9]{3}" value='{{qdate_value}}' onfocus="(this.type='date')">
-    <input type='submit' value='Szukaj'>
+<form>
+    <input id="search" type="text" placeholder="Szukaj protokołu..." value="{{ search_value }}">
+    <input id="created-date" type="date" placeholder="Wybierz datę utworzenia...">
+    <button id="search-date-range-button" type="button">Szukaj</button>
+    <button id="clear-filters-button" type="button">Wyczyść filtry</button>
 
-  </form>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Zaawansowane
+  </button>
 
 
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
 
+      <div id="date-range-inputs">
+        <input id="start-date" type="date" placeholder="Wybierz datę początkową..."> do
+        <input id="end-date" type="date" placeholder="Wybierz datę końcową...">
+      </div>
+
+
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="return-option" id="flexRadioDefault1" value='true'>
+          <label class="form-check-label" for="flexRadioDefault1">
+            Zwrot
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="return-option" id="flexRadioDefault2" value='false'>
+          <label class="form-check-label" for="flexRadioDefault2">
+            Przekazanie
+          </label>
+        </div>
+
+      </div>
+</div>
+
+
+ 
+
+</form>
 
   <div class="col py-3" >
     <table class="table mb-0">
@@ -29,56 +58,198 @@
         <th scope="col">Typ</th>
         <th scope="col"></th>
       </tr>
-
-      {% for protocol in protocolList %}
-        <tr class="fw-normal">
-          <td style="width: 1em;">
-            {% if protocol.is_scanned %} <!-- TODO: Latin chars!!! -->
-              <font color="green" data-bs-toggle="tooltip" data-bs-placement="top" title="Skan zostal dostarczony">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16"><path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/></svg>
-              </font>
-            {% elif protocol.printed_count == 0 %}
-              <font color="blue" data-bs-toggle="tooltip" data-bs-placement="top" title="Dokument nie zostal wydrukowany">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer-fill" viewBox="0 0 16 16"><path d="M5 1a2 2 0 0 0-2 2v1h10V3a2 2 0 0 0-2-2zm6 8H5a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1"/><path d="M0 7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-1v-2a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2H2a2 2 0 0 1-2-2zm2.5 1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/></svg>
-              </font>
-            {% else %}
-              <font color="red" data-bs-toggle="tooltip" data-bs-placement="top" title="Skan nie zostal dostarczony">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16"><path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/><path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/></svg>
-              </font>
-            {% endif %}
-          </td>
-          <td>{{protocol.barcode}}</td>
-          <td>{{protocol.employee}}</td>
-          <td>{{protocol.created|date:"d.m.Y G:i"}}</td>
-          <td>{{protocol.is_return|yesno:"Zwrot,Przekazanie"}}</td>
-          <td><a class="btn btn-success mb-1" role="button" href="{% url 'singleProtocol' protocol.id %}">Wyswietl</a></td>
-        </tr>
-      
-      {%endfor%}  
+    <tbody id="data"> </tbody>
 
     </table>
-  </div>
+<div class="card-footer text-end p-3">
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center" id="pagination">
+            <li class="page-item" id="first-page">
+                <button class="page-link" onclick="page(0)">&laquo; First</button>
+            </li>
+            <li class="page-item" id="previous-page">
+                <button class="page-link" onclick="page(page_no - 1)">Previous</button>
+            </li>
+            <!-- Page numbers will be inserted here dynamically -->
+            <li class="page-item" id="next-page">
+                <button class="page-link" onclick="page(page_no + 1)">Next</button>
+            </li>
+            <li class="page-item" id="last-page">
+                <button class="page-link" onclick="page(count / page_size)">&raquo; Last</button>
+            </li>
+        </ul>
+    </nav>
+</div>
 
-  <div class="container p-4">
-    <div class="pagination justify-content-center">
-        <span class="step-links">
-          {% if protocolList.has_previous %}
-              <a href="?page=1&q={{q_value}}">&laquo; first</a>
-              <a href="?page={{ protocolList.previous_page_number }}&q={{q_value}}">previous</a>
-          {% endif %}
+<script>
+    const page_size = 20;
+    let page_no = 0;
+    let count = -1;
+    let employeeIdToDelete = null;
 
-            <span class="current">
-                Page {{ protocolList.number }} of {{ protocolList.paginator.num_pages }}
-            </span>
+    document.addEventListener('DOMContentLoaded', () => {
+        page(0);
 
-          {% if protocolList.has_next %}
-              <a href="?page={{ protocolList.next_page_number }}&q={{q_value}}">next</a>
-              <a href="?page={{ protocolList.paginator.num_pages }}&q={{q_value}}">last &raquo;</a>
-          {% endif %}
-        </span>
-        </div>
-    </div>
-  <!--end of Pagination-->
+        document.getElementById('search').addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                page(0);
+            }
+        });
+
+        document.getElementById('created-date').addEventListener('change', function() {
+            page(0); // Call page(0) when the date changes
+        });
+
+         document.getElementById('clear-filters-button').addEventListener('click', function() {
+            // Clear all input fields
+            document.getElementById('search').value = '';
+            document.getElementById('created-date').value = '';
+            document.getElementById('start-date').value = '';
+            document.getElementById('end-date').value = '';
+
+            document.getElementById('flexRadioDefault1').checked = false; // Assuming you want to reset to the first radio button
+            document.getElementById('flexRadioDefault2').checked = false;
+    
+
+            // Call page(0) to reload data
+            page(0);
+        });
+
+
+        document.getElementById('search-date-range-button').addEventListener('click', function() {
+            page(0); // Call page(0) to reload data
+        });
+
+  
+    });
+
+    async function page(p) {
+        if (p < 0) p = 0;
+        else if (count > 0 && (count / page_size - 1) < p) p = Math.ceil(count / page_size - 1);
+        page_no = p;
+
+        let data = document.getElementById('data');
+        data.innerHTML = '';
+        let params = {
+            limit: page_size,
+            offset: p * page_size,
+            {% if request.user.userinfo.region.id %}
+            region: "{{ request.user.userinfo.region.id }}"
+            {% endif %}
+        };
+
+        let search = document.getElementById('search').value;
+        let created_date = document.getElementById('created-date').value;
+        let start_date = document.getElementById('start-date').value;
+        let end_date = document.getElementById('end-date').value;
+        let selectedOption = document.querySelector('input[name="return-option"]:checked');
+
+        if (selectedOption) {
+            // If an option is checked, include the selected value as parameter
+            params["is_return"] = selectedOption.value === "true";
+        } else {
+            // If no option is checked, do not include the parameter
+            delete params["is_return"];
+        }
+
+        
+        if (search) params["search"] = search;
+        if (created_date) params["created_at"] = created_date;
+           if (start_date && end_date) {
+        params["date_after"] = start_date; // Adjust to match your filter field names
+        params["date_before"] = end_date; // Adjust to match your filter field names
+        }
+        
+
+        let response = await fetch("{% url 'protocol-list' %}?" + new URLSearchParams(params).toString());
+        let result = await response.json();
+        count = result.count;
+        let protocols = result.results;
+        let iconHTML = '';
+        protocols.forEach(protocol => {
+          const createdDate = new Date(protocol.created);
+          
+           if (protocol.is_scanned) {
+            iconHTML = `<font color="green" data-bs-toggle="tooltip" data-bs-placement="top" title="Skan został dostarczony">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16"><path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/></svg>
+                    </font>`
+           }
+          else if (protocol.printed_count === 0) {
+            iconHTML = `<font color="blue" data-bs-toggle="tooltip" data-bs-placement="top" title="Dokument nie zostal wydrukowany">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer-fill" viewBox="0 0 16 16"><path d="M5 1a2 2 0 0 0-2 2v1h10V3a2 2 0 0 0-2-2zm6 8H5a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1"/><path d="M0 7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-1v-2a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2H2a2 2 0 0 1-2-2zm2.5 1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/></svg>
+                </font>`
+          }
+          else{
+            iconHTML = `<font color="red" data-bs-toggle="tooltip" data-bs-placement="top" title="Skan nie zostal dostarczony">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16"><path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/><path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/></svg>
+              </font>`
+          }
+            data.innerHTML += `
+            <tr class="fw-normal">
+                <td style="width: 1em;">
+                    ${iconHTML}
+                </td>
+                <td>${protocol.barcode}</td>
+                <td>${protocol.employee.user_name} ${protocol.employee.user_surname}</td>
+                <td>${dtos(createdDate)}</td>
+                <td>${protocol.is_return ? "Zwrot" : "Przekazanie"}</td>
+                <td><a class="btn btn-success mb-1" role="button" href="/protocols/${protocol.id}">Wyświetl</a></td>
+            </tr>
+            `;
+        });
+        $('[data-bs-toggle="tooltip"]').tooltip();
+        updatePagination();
+    }
+
+    function updatePagination() {
+        let pagination = document.getElementById('pagination');
+        let totalPages = Math.ceil(count / page_size);
+
+        // Clear existing page numbers
+        pagination.querySelectorAll('.page-number').forEach(pageNumber => pageNumber.remove());
+
+        // Calculate start and end page numbers
+        let startPage = Math.max(page_no - 1, 0);
+        let endPage = Math.min(startPage + 2, totalPages - 1);
+
+        // Adjust start page if end page is less than total pages
+        if (endPage - startPage < 2) {
+            startPage = Math.max(endPage - 2, 0);
+        }
+
+        // Generate new page numbers
+        for (let i = startPage; i <= endPage; i++) {
+            let pageNumberItem = document.createElement('li');
+            pageNumberItem.className = 'page-item page-number' + (i === page_no ? ' active' : '');
+            pageNumberItem.innerHTML = `<button class="page-link" onclick="page(${i})">${i + 1}</button>`;
+            pagination.insertBefore(pageNumberItem, pagination.children[pagination.children.length - 2]);
+        }
+
+        // Enable/Disable navigation buttons
+        document.getElementById('first-page').classList.toggle('disabled', page_no === 0);
+        document.getElementById('previous-page').classList.toggle('disabled', page_no === 0);
+        document.getElementById('next-page').classList.toggle('disabled', page_no >= totalPages - 1);
+        document.getElementById('last-page').classList.toggle('disabled', page_no >= totalPages - 1);
+    }
+
+    function dtos(date) {
+    let day = date.getDate();
+    let month = date.getMonth() + 1; // Months are zero-based
+    let year = date.getFullYear();
+    let hours = date.getHours();
+    let minutes = date.getMinutes();
+    
+    // Add leading zeros to day, month, hours, and minutes if necessary
+    if (day < 10) day = '0' + day;
+    if (month < 10) month = '0' + month;
+    if (hours < 10) hours = '0' + hours;
+    if (minutes < 10) minutes = '0' + minutes;
+    
+    return `${day}.${month}.${year} ${hours}:${minutes}`; // Format: DD-MM-YYYY HH:MM
+}
+</script>
+
   
 
 {% endblock content %}
